--- a/main.yml
+++ b/main.yml
@@ -1,5 +1,14 @@
 ---
 
+# Install python2
+- hosts: all
+  gather_facts: False
+  tasks:
+  - name: install python 2
+    raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+  tags:
+  - python
+
 # Install Docker Engine CS
 - hosts: all
   sudo: True
