Cleanup playbook. Simplify Vagrant and Terraform example files.

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,10 +1,19 @@
-[ucp]
-192.168.0.230
-192.168.0.233 ucp_worker=1
-192.168.0.234 ucp_worker=1
-192.168.0.235 ucp_worker=1
+[ucp_managers]
+192.168.0.230 ucp_manager=1
+192.168.0.231 ucp_replica=1
+192.168.0.232 ucp_replica=1
 
-[dtr]
-192.168.0.233 name=worker1
-192.168.0.234 name=worker2 dtr_replica=1
-192.168.0.235 name=worker3 dtr_replica=1
+[ucp_workers]
+192.168.0.233 dtr_manager=1
+192.168.0.234 dtr_replica=1
+192.168.0.235 dtr_replica=1
+
+[ucp:children]
+ucp_managers
+ucp_workers
+
+[dtr:children]
+ucp_workers
+
+[dtr:vars]
+replica_id=13b873dfa912
