--- a/inventory.ini
+++ b/inventory.ini
@@ -1,12 +1,12 @@
 [ucp_managers]
-192.168.0.230 ucp_manager=1
-192.168.0.231 ucp_replica=1
-192.168.0.232 ucp_replica=1
+IP1 ucp_manager=1
+IP2 ucp_replica=1
+IP3 ucp_replica=1
 
 [ucp_workers]
-192.168.0.233 dtr_manager=1
-192.168.0.234 dtr_replica=1
-192.168.0.235 dtr_replica=1
+IP4 dtr_manager=1
+IP5 dtr_replica=1
+IP6 dtr_replica=1
 
 [ucp:children]
 ucp_managers
