--- a/configuration/roles/install-ucp/tasks/main.yml
+++ b/configuration/roles/install-ucp/tasks/main.yml
@@ -1,29 +1,40 @@
 ---
+- name: UCP | Pull image
+  shell: docker image pull docker/ucp:"{{ UCP_VERSION }}"
+  when: ucp_leader is defined
+
 - name: UCP | Install controller
-  shell: docker run --rm -it --name ucp -v /var/run/docker.sock:/var/run/docker.sock docker/ucp install --admin-username "admin" --admin-password "ucppassword" --host-address "{{ inventory_hostname }}"
-  ignore_errors: yes
-  when: ucp_manager is defined
+  shell: |
+    docker container run --rm -it
+    --name ucp
+    -v /var/run/docker.sock:/var/run/docker.sock
+    docker/ucp:"{{ UCP_VERSION }}"
+    install
+    --admin-username "{{ UCP_USERNAME }}"
+    --admin-password "{{ UCP_PASSWORD }}"
+    --host-address "{{ inventory_hostname }}"
+  when: ucp_leader is defined
 
 - name: UCP | Get manager token
   shell: docker swarm join-token -q manager
   register: ucp_manager_token
-  when: ucp_manager is defined
+  when: ucp_leader is defined
 
 - name: UCP | Get worker token
   shell: docker swarm join-token -q worker
   register: ucp_worker_token
-  when: ucp_manager is defined
+  when: ucp_leader is defined
 
 - name: UCP | Save manager and worker tokens
   set_fact: manager_token="{{ ucp_manager_token.stdout }}" worker_token="{{ ucp_worker_token.stdout }}"
-  when: ucp_manager is defined
+  when: ucp_leader is defined
 
-- name: UCP | Install replicas
+- name: UCP | Install additional managers
   shell: docker swarm join --token "{{ hostvars[groups['ucp_managers'][0]]['manager_token'] }}" --advertise-addr "{{ inventory_hostname }}" "{{ groups['ucp_managers'][0] }}"
   ignore_errors: yes
-  when: ucp_replica is defined
+  when: ucp_manager is defined
 
 - name: UCP | Install workers
   shell: docker swarm join --token "{{ hostvars[groups['ucp_managers'][0]]['worker_token'] }}" --advertise-addr "{{ inventory_hostname }}" "{{ groups['ucp_managers'][0] }}"
   ignore_errors: yes
-  when: ucp_manager is undefined and ucp_replica is undefined
+  when: ucp_leader is undefined and ucp_manager is undefined
