--- a/inventory.ini
+++ b/inventory.ini
@@ -1,12 +1,19 @@
+ucp-manager-01 ansible_host=[IP1] ucp_manager=1
+ucp-manager-02 ansible_host=[IP2] ucp_replica=1
+ucp-manager-03 ansible_host=[IP3] ucp_replica=1
+ucp-worker-01 ansible_host=[IP4] dtr_manager=1
+ucp-worker-02 ansible_host=[IP5] dtr_replica=1
+ucp-worker-03 ansible_host=[IP6] dtr_replica=1
+
 [ucp_managers]
-IP1 ucp_manager=1
-IP2 ucp_replica=1
-IP3 ucp_replica=1
+ucp-manager-01
+ucp-manager-02
+ucp-manager-03
 
 [ucp_workers]
-IP4 dtr_manager=1
-IP5 dtr_replica=1
-IP6 dtr_replica=1
+ucp-worker-01
+ucp-worker-02
+ucp-worker-03
 
 [ucp:children]
 ucp_managers
