--- a/configuration/roles/remove-ucp/tasks/main.yml
+++ b/configuration/roles/remove-ucp/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: UCP | Uninstall controller
-  shell: docker container run --rm -it -v /var/run/docker.sock:/var/run/docker.sock --name ucp docker/ucp:3.0.1 uninstall-ucp --interactive
+  become: true
+  shell: docker container run --rm -v /var/run/docker.sock:/var/run/docker.sock docker/ucp:{{ UCP_VERSION }} uninstall-ucp
   ignore_errors: yes
-  when: ucp_manager is defined
+  when: ucp_leader is defined
