--- a/configuration/roles/install-nDVP/tasks/main.yml
+++ b/configuration/roles/install-nDVP/tasks/main.yml
@@ -19,7 +19,7 @@
 - name: nDVP | Enable iSCSI
   become: true
   shell: mpathconf --enable --with_multipathd y
-  when: ansible_os_family == 'RedHat' and app is defined
+  when: app is defined
 
 - name: nDVP | Enable iscsid and multipathd
   become: true
@@ -27,23 +27,23 @@
   with_items:
     - iscsid
     - multipathd
-  when: ansible_os_family == 'RedHat' and app is defined
+  when: app is defined
 
 - name: nDVP | Create config folder
   become: true
   file:
     path: /etc/netappdvp
     state: directory
-  when: ansible_os_family == 'RedHat' and app is defined
+  when: app is defined
 
 - name: nDVP | Copy configuration file
   become: true
   copy:
     src: configSAN.json
     dest: /etc/netappdvp/configSAN.json
-  when: ansible_os_family == 'RedHat' and app is defined
+  when: app is defined
 
 - name: nDVP | Install plugin for SAN
   become: true
   shell: docker plugin install --grant-all-permissions --alias netappsan netapp/ndvp-plugin:17.07 config=configSAN.json
-  when: ansible_os_family == 'RedHat' and app is defined
+  when: app is defined
