Add ansible generated inventory by terraform provisionning

--- a/configuration/ansible.cfg
+++ b/configuration/ansible.cfg
@@ -3,4 +3,4 @@ deprecation_warnings=False
 ask_sudo_pass=False
 host_key_checking=False
 retry_files_enabled = False
-inventory = inventory.ini
+inventory = inventory/inventory.tpl
