--- a/configuration/roles/install-nDVP/tasks/main.yml
+++ b/configuration/roles/install-nDVP/tasks/main.yml
@@ -4,7 +4,7 @@
   yum:
     name: nfs-utils
     state: latest
-  when: ansible_os_family == 'RedHat' and app is defined
+  when: ansible_os_family == 'RedHat'
 
 - name: nDVP | Add iSCSI package
   become: true
@@ -14,12 +14,11 @@
     - iscsi-initiator-utils
     - sg3_utils
     - device-mapper-multipath
-  when: ansible_os_family == 'RedHat' and app is defined
+  when: ansible_os_family == 'RedHat'
 
 - name: nDVP | Enable iSCSI
   become: true
   shell: mpathconf --enable --with_multipathd y
-  when: app is defined
 
 - name: nDVP | Enable iscsid and multipathd
   become: true
@@ -27,23 +26,19 @@
   with_items:
     - iscsid
     - multipathd
-  when: app is defined
 
 - name: nDVP | Create config folder
   become: true
   file:
     path: /etc/netappdvp
     state: directory
-  when: app is defined
 
 - name: nDVP | Copy configuration file
   become: true
   copy:
     src: configSAN.json
     dest: /etc/netappdvp/configSAN.json
-  when: app is defined
 
 - name: nDVP | Install plugin for SAN
   become: true
   shell: docker plugin install --grant-all-permissions --alias netappsan netapp/ndvp-plugin:17.07 config=configSAN.json
-  when: app is defined
