--- a/configuration/roles/install-nDVP/tasks/main.yml
+++ b/configuration/roles/install-nDVP/tasks/main.yml
@@ -32,6 +32,20 @@
     src: configSAN.json
     dest: /etc/netappdvp/configSAN.json
 
+- name: nDVP | Discover
+  become: true
+  shell: iscsiadm -m discoverydb -t st -p "{{ nDVP_IP }}" --discover
+
+- name: nDVP | Login
+  become: true
+  shell: iscsiadm -m node -p "{{ nDVP_IP }}" --login 
+
+- name: nDVP | Enable and start iscsi
+  become: true
+  systemd: name={{ item }} enabled=yes state=started
+  with_items:
+    - iscsi
+
 - name: nDVP | Install plugin for SAN
   become: true
   shell: docker plugin install --grant-all-permissions --alias netappsan netapp/ndvp-plugin:17.07 config=configSAN.json
